objects/ERP_Export_to_SAP__c.object
<CustomObject>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPriceHolder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPriceHolder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>markForDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>markForDeletion</label>
        <type>Checkbox</type>
    </fields>
    <label>ERP-Export to SAP</label>
    <nameField>
        <displayFormat>EEXP:{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>ERP-Export to SAP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ERP-Export to SAP</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Sharing_with_Public_Group__c</fullName>
        <label>Sharing with Public Group</label>
    </sharingReasons>
</CustomObject>